--- a/cv06/cz.upce.inpia.simple-shop.inventory/pom.xml
+++ b/cv06/cz.upce.inpia.simple-shop.inventory/pom.xml
@@ -19,8 +19,11 @@
     </properties>
 
     <dependencies>
-
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+            <version>LATEST</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
