--- a/cv06/cz.upce.inpia.simple-shop.config_server/src/main/resources/config/inpia-simple-shop-catalog.properties
+++ b/cv06/cz.upce.inpia.simple-shop.config_server/src/main/resources/config/inpia-simple-shop-catalog.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inpia_eshop?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=hovn0
 spring.jpa.database=mysql
+spring.thymeleaf.prefix=classpath:/thymeleaf/
+spring.thymeleaf.cache=false
